@@ -1,0 +1,4 @@
+(add-to-list 'load-path "e:/common/dotemacs")
+(require 'init-basic nil t)
+(require 'init-site nil t)
+(require 'init-misc nil t)
