@@ -68,19 +68,19 @@
   (define-key c-mode-base-map [M-S-f12] 'semantic-analyze-proto-impl-toggle)
   (global-set-key [f12] 'semantic-ia-fast-jump)
   (global-set-key [C-f12] 'semantic-ia-fast-jump)
-  (global-set-key [S-f12] 'pop-global-mark)
-  ;; (global-set-key [S-f12]
-  ;;                 (lambda ()
-  ;;                   (interactive)
-  ;;                   (if (ring-empty-p (oref semantic-mru-bookmark-ring ring))
-  ;;                       (error "Semantic Bookmark ring is currently empty"))
-  ;;                   (let* ((ring (oref semantic-mru-bookmark-ring ring))
-  ;;                          (alist (semantic-mrub-ring-to-assoc-list ring))
-  ;;                          (first (cdr (car alist))))
-  ;;                     (if (semantic-equivalent-tag-p (oref first tag)
-  ;;                                                    (semantic-current-tag))
-  ;;                         (setq first (cdr (car (cdr alist)))))
-  ;;                     (semantic-mrub-switch-tags first))))
+  ;; (global-set-key [S-f12] 'pop-global-mark)
+  (global-set-key [S-f12]
+                  (lambda ()
+                    (interactive)
+                    (if (ring-empty-p (oref semantic-mru-bookmark-ring ring))
+                        (error "Semantic Bookmark ring is currently empty"))
+                    (let* ((ring (oref semantic-mru-bookmark-ring ring))
+                           (alist (semantic-mrub-ring-to-assoc-list ring))
+                           (first (cdr (car alist))))
+                      (if (semantic-equivalent-tag-p (oref first tag)
+                                                     (semantic-current-tag))
+                          (setq first (cdr (car (cdr alist)))))
+                      (semantic-mrub-switch-tags first))))
 
   (pulse-toggle-integration-advice (if window-system 1 -1))
   (defadvice cua-exchange-point-and-mark (after pulse-advice activate)
