@@ -1,3 +1,9 @@
+2010-03-29  Meteor Liu  <meteor1113@gmail.com>
+
+	* init-site.el: Bind S-f12 to semantic-mrub-switch-tags.
+
+	* dotemacs.sample: Add.
+
 2010-03-18  Meteor Liu  <meteor1113@gmail.com>
 
 	* init-site.el: Bind key to semantic-tag-folding-fold-block and
